# yagsvc

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.devcontainer/: .env  Dockerfile  devcontainer.json  post-create.sh
.devcontainer/vscode/: launch.json  settings.json
.github/: settings.yml
.github/workflows/: build_and_publish.yml
lint/: .flake8  .gitlint  pylintrc
runtime/conf/: gunicorn.config.py
tests/: requests.http  test_main.py
yagsvc/: __init__.py
yagsvc/api/: account.py  apispec.py  app.py  auth.py  misc.py
yagsvc/biz/: account.py  app.py  errors.py  log_handler.py  misc.py
yagsvc/dto/: account.py  app.py
yagsvc/models/: account.py  auth.py
yagsvc/services/: appsvc.py  helpers.py
yagsvc/services/dto/: appsvc.py
yagsvc/sqldb/: __init__.py
yagsvc/static/js/: swagger-ui-bundle.js  swagger-ui-es-bundle-core.js  swagger-ui-es-bundle.js  swagger-ui-standalone-preset.js  swagger-ui.js
yagsvc/templates/: index.html  swaggerui.html
